# feetech_sts_hardware

./: CMakeLists.txt  LICENSE  README.md  feetech_sts_hardware.xml  package.xml
include/: feetech_sts_hardware.hpp  feetech_sts_models.hpp
src/: feetech_sts_hardware.cpp  feetech_sts_models.cpp
src/SCServo/: CMakeLists.txt
src/SCServo/src/: SCSerial.cpp
